--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
     <p>誰でもできるよ！！</p>
 
     <div class="container">
-        <div class="box fixed">100px x 100px</div>
-        <div class="box percent-width">50% x 100px</div>
-        <div class="box vw-vh">50vw x 50vh</div>
+        <details>
+            <summary>width/height</summary>
+            <div class="box fixed">100px x 100px</div>
+            <div class="box percent-width">50% x 100px</div>
+            <div class="box vw-vh">50vw x 50vh</div>
+        </details>
+    </div>
+
+    <div class="container">
+        <details>
+            <summary>margin</summary>
+                <div class="box">Box 1</div>
+                <div class="box margin-different">Box 2</div>
+                <div class="box margin-auto">Centered Box</div>
+        </details>
     </div>
 
 </body>
