CSSのグリッドレイアウト練習を追加

--- a/index.html
+++ b/index.html
@@ -28,7 +28,25 @@
                 <div class="box margin-auto">Centered Box</div>
         </details>
     </div>
-
+    <div class="container">
+        <details>
+            <summary>gridレイアウト</summary>
+            <p>・基本ver.</p>
+            <div class="grid-container">
+                <div class="grid-item grid-item1">要素1</div>
+                <div class="grid-item grid-item2">要素2</div>
+                <div class="grid-item grid-item3">要素3</div>
+                <div class="grid-item grid-item4">要素4</div>
+            </div>
+            <p>・grid-templateプロパティ使用ver.</p>
+            <div class="grid-container-area">
+                <div class="grid-item grid-item11">要素1</div>
+                <div class="grid-item grid-item22">要素2</div>
+                <div class="grid-item grid-item33">要素3</div>
+                <div class="grid-item grid-item44">要素4</div>
+            </div>
+        </details>
+    </div>
 </body>
 
 </html>
