CSSのアニメーションクラス練習を追加

--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
                </div>
         </details>
     </div>
+    <div class="container">
+        <details>
+            <summary>CSSアニメーション</summary>
+            <p>・Transition</p>
+            <div class="transition-box">マウスを乗せてみて</div>
+            <p>・Animation</p>
+            <div class="animation-box">アニメーション</div>
+        </details>
+    </div>
 </body>
 
 </html>
